Temporary cdn for display component with local host

--- a/testdisplay-notice.html
+++ b/testdisplay-notice.html
@@ -48,7 +48,7 @@
 	<script
 		src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.js"></script>
 	<script type="text/javascript"
-		src="http://apiscol.crdp-versailles.fr/cdn/0.0.1/js/jquery.apiscol.js"></script>
+		src="http://apiscol.cdn.local/cdn/0.0.1/js/jquery.apiscol.js"></script>
 
 	<script type="text/javascript">
 		var host = "http://localhost:8080";
